# stepic3

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_02_1139-14f37a4e3d25_create_tables.py  2024_03_02_1245-f53e2aed4139_create_todos_table.py
app/api/: __init__.py
app/api/db/: __init__.py  database.py  models.py  settings_db.py
app/api/db/models/: __init__.py  base.py  todos.py  users.py
app/api/endpoints/: auth.py  todo.py  users.py
app/api/schemas/: __init__.py  todo.py  user.py
