[tool.poetry]
name = "stepic3"
version = "0.1.0"
description = ""
authors = ["Татьяна Сарафанова <sara4ka0@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
asyncpg = "^0.29.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
